# Handwritten-Chemistry-Lab-Notebook-Parser

./: .gitignore  README.md  pyproject.toml  result.json  result.md  spec.md
scripts/: evaluate.py  run_page.py  to_markdown.py  train_layout.py  train_ocr.py
src/notebook_parser/: __init__.py  cli.py  config.py  imaging.py  pipeline.py  report.py  types.py
src/notebook_parser/chemistry/: __init__.py  extract.py  normalize.py  structures.py
src/notebook_parser/layout/: __init__.py  detect.py  reading_order.py
src/notebook_parser/llm/: __init__.py  client.py  prompts.py  schemas.py
src/notebook_parser/ocr/: __init__.py  correct.py  decode.py  recognize.py
src/notebook_parser/passes/: __init__.py  chemistry.py  experiment.py  transcription.py
src/notebook_parser/preprocessing/: __init__.py  _cv.py  denoise.py  deskew.py  normalize.py
src/notebook_parser/semantics/: __init__.py  evidence.py  summarize.py
src/notebook_parser/symbols/: __init__.py  normalize.py  patterns.py
src/notebook_parser/validation/: __init__.py  confidence.py  schema.py
tests/: conftest.py  test_chemistry.py  test_imaging.py  test_layout.py  test_llm.py  test_ocr.py  test_passes.py  test_pipeline.py  test_preprocessing.py  test_report.py  test_semantics.py  test_symbols.py  test_validation.py
