[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notebook-parser"
version = "0.2.0"
description = "Multi-pass multimodal parser for handwritten chemistry lab notebook pages (OpenAI)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Notebook Parser Team" }]

# Core runtime dependencies. Enough to run the full multimodal pipeline against
# the OpenAI API. Image-conditioning and chemistry-validation extras are optional
# and imported lazily so the package works in minimal environments.
dependencies = [
    "openai>=1.40",
    "pydantic>=2.5",
    "numpy>=1.24",
    "Pillow>=10.0",
]

[project.optional-dependencies]
# Optional local image conditioning (deskew, denoise) before sending to the API.
vision = [
    "opencv-python-headless>=4.8",
    "scikit-image>=0.22",
]
# Chemistry normalization/validation (SMILES canonicalization).
chem = [
    "rdkit>=2023.9",
    "networkx>=3.0",
]
dev = [
    "pytest>=7.4",
]
all = [
    "opencv-python-headless>=4.8",
    "scikit-image>=0.22",
    "rdkit>=2023.9",
    "networkx>=3.0",
    "pytest>=7.4",
]

[project.scripts]
parse-notebook-page = "notebook_parser.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
